@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.6 ===
+* Added opacity manipulation to the lsp::Color class.
 
 === 1.0.5 ===
 * Updated PrefixLoader interface and implementation.
